<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jammerand14@gmail.com">jhsrobo</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>core</depend>
  <depend>python3-smbus</depend>
  <depend>python-smbus</depend>
  <depend>python3-adafruit-blinka-pip</depend>
  <depend>python3-adafruit-circuitpython-bno055-pip</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
